--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="d-flex justify-content-center">Newton Forms</h1>
+    <h1 class="d-flex justify-content-center mt-2">Newton Forms</h1>
     <div class="d-flex justify-content-center mt-3" style="width: 100%;">
         <form style="width: 60%;">
             <div class="form-floating mb-3">
@@ -28,8 +28,8 @@
                 <label for="inputPassword" class="mb-1">Password</label>
                 <input type="password" class="form-control" id="password-input" placeholder="Password....">
             </div>
-            <label for="collge-options" class="form-label">Select your college name.</label>
-            <input class="form-control" list="collge-options" id="collge-options" placeholder="Type to search...">
+            <label for="collge-input" class="form-label">Select your college name.</label>
+            <input class="form-control" list="collge-options" id="collge-input" placeholder="Type to search...">
             <datalist id="collge-options">
                 <option value="NIT">
                 <option value="BITS">
